# snowexsql

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  add_snow_depths.py  create.py  credentials.json.sample  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.agents/: POSTGIS_OPPORTUNITIES.md  implement-mcp-server-improvements.md  initial-setup-snowexsqlbot.md  mcp-research-prompt.md  plan-mcp-server-improvements.md  research-mcp-server-and-agent-documentation.md  research-snowexsql-tutorial.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  workflows.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cd.yml  ci.yaml  main.yml  release_pypi.yaml
deployment/: README.md
deployment/aws/: ecr_policy.json  secrets_policy.json
deployment/docker/: .dockerignore  Dockerfile  requirements-lambda.txt
deployment/scripts/: deploy.sh  test_lambda.sh  update_lambda_config.sh
docs/: Makefile  _config.yml  _toc.yml  api.rst  authors.rst  cheat_sheet.rst  conf.py  contributing.rst  data_notes.rst  database_structure.rst  examples.rst  history.rst  index.rst  installation.rst  make.bat  qgis.rst  requirements.txt  usage.rst
docs/_ext/: build_gallery.py
docs/_templates/: layout.html
docs/community/: authors.rst  how_to_contribute.rst  index.rst
docs/gallery/: api_intro.ipynb  api_intro_example.ipynb  api_plot_pit_density_example.ipynb  api_plot_pit_swe_example.ipynb  camera_derived_snow_depths_example.ipynb  compare_SSA_instruments_example.ipynb  compare_UAVSAR_to_depths_example.ipynb  compare_depth_maps_example.ipynb  gallery.txt  gallery.yml  get_spiral_example.ipynb  getting_started_example.ipynb  graupel_pits_example.ipynb  graupel_smp_example.ipynb  index.md  lambda_example.ipynb  overview_example.ipynb  plot_pit_swe_example.ipynb  plot_raster_example.ipynb  raster_union_and_more_example.ipynb  vertical_datum_check_example.ipynb  what_is_in_the_db_example.ipynb
notebooks/: examples.ipynb
scripts/: 3DEP_sources_1m_DEM.txt  Compare_UAVSAR_to_depths_example.ipynb  add_QSI.py  add_UAVSAR.py  add_aso_snowoff.py  add_gm_snow_off.py  add_gpr.py  add_gpr_twt.py  add_profiles.py  add_site_details.py  add_smp.py  add_snow_depths.py  add_ssa.py  clear_dataset.py  clipping_example_no_ORM.py  convert_uavsar.py  create.py  find_raster_tile.py  get_graupel_pits.py  install.py  install_ubuntu.sh  make_test_uavsar.py  modify_conf.py  plot_raster.py  plot_ssa_comparison.py  plot_survey_overview.py  plot_swe.py  query.py  resample_smp.py  run.py  run.sh  test_raster.py
scripts/analysis/: compare_aso_projection.py  snow_depths.py
scripts/download/: aso_sources.txt  download_aso.sh  download_nsidc.sh  download_uavsar.py  nsidc_sources.txt  temp_do_not_download.txt
scripts/install/: install_mac.sh  install_ubuntu.sh  modify_conf.py
scripts/test_data/: make_smp_test_data.py
scripts/upload/: add_QSI.py  add_UAVSAR.py  add_aso.py  add_aso_snowoff.py  add_gm_snow_off.py  add_gpr.py  add_profiles.py  add_site_details.py  add_smp.py  add_snow_depths.py  add_snow_poles.py  add_ssa.py  convert_uavsar.py  create.py  credentials.json  download_snow_off_dem.sh  resample_smp.py  run.py
snowXSQL/: create.py
snowexsql/: __init__.py  analysis.py  api.py  batch.py  cli.py  conversions.py  data.py  db.py  functions.py  interpretation.py  lambda_client.py  lambda_handler.py  metadata.py  projection.py  string_management.py  upload.py  utilities.py
snowexsql/tables/: __init__.py  base.py  campaign.py  campaign_data.py  campaign_observation.py  doi.py  image_data.py  image_observation.py  instrument.py  layer_data.py  measurement_type.py  observers.py  point_data.py  point_observation.py  single_location.py  site.py  site_data.py
snowxsql/: __init__.py  analysis.py  batch.py  cli.py  conversions.py  create_db.py  data.py  db.py  functions.py  input.py  interpretation.py  metadata.py  projection.py  string_management.py  upload.py  utilities.py
tests/: __init__.py  conftest.py  credentials.json  credentials.json.sample  db_connection.py  db_setup.py  map.html  scratch.py  sql_test_base.py  test_analysis.py  test_api.py  test_batch.py  test_conversions.py  test_create_db.py  test_db.py  test_db_tables.py  test_functions.py  test_interpretation.py  test_layers.py  test_metadata.py  test_points.py  test_projection.py  test_rasters.py  test_smp_layers.py  test_snowxsql.py  test_string_management.py  test_utilities.py
tests/api/: test_layer_measurements.py  test_point_measurements.py
tests/data/: LWC.csv  LWC2.csv  README.txt  S06M0874_2N12_20200131.CSV  S19M1013_5S21_20200201.CSV  SSA.csv  density.csv  depths.csv  gpr.csv  gpr_twt.csv  pole_depths.csv  site_5S21.csv  site_details.csv  smp_log.csv  stratigraphy.csv  temperature.csv  uavsar.amp2.grd  uavsar.ann  uavsar.int.grd  uavsar_latlon.amp1.grd  uavsar_latlon.amp1.real.tif  uavsar_latlon.cor.grd
tests/data/be_gm1_0287/: ..aux.xml  dblbnd.adf  hdr.adf  sta.adf  w001001.adf
tests/data/be_gm1_0328/: dblbnd.adf  hdr.adf  metadata.xml  prj.adf  sta.adf  w001001.adf
tests/data/uavsar/: uavsar_utm.amp1.real.tif  (+4 more)
tests/deployment/: conftest.py  test_lambda_client.py  test_lambda_handler.py
tests/factories/: __init__.py  base_factory.py  campaign.py  doi.py  instrument.py  layer_data.py  measurement_type.py  observer.py  point_data.py  point_observation.py  site.py
tests/tables/: test_campaign.py  test_doi.py  test_instrument.py  test_layer_data.py  test_measurment_type.py  test_observer.py  test_point_data.py  test_point_observation.py  test_site.py
