[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "snowexsql"
dynamic = ["version"]
license = {text = "GNU"}
description = "SQL Database software for SnowEx data"
keywords = ["snowex", "sql", "database", "snow"]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13'
]

dependencies = [
    "utm >=0.8, <0.9",
    "geoalchemy2 >=0.18, <1.0",
    "geopandas >=1.1, <2.0",
    "psycopg2-binary >=2.9, <3.0",
    "rasterio >=1.4, <2.0",
    "SQLAlchemy >=2.0, <3.0",
]


[project.optional-dependencies]
dev = [
    "factory_boy >=3.3, <4.0",
    "pytest-factoryboy >=2.8, <3.0",
    "pytest >=8.4, <9.0",
    "pytest-cov >=7.0, <8.0",
    "sphinx-autobuild >=2024.10, <2025.0",
]
docs = [
    "ipython >=8.37, <9.0",
    "nbconvert >=7.16, <8.0",
    "nbsphinx >=0.9, <1.0",
    "pandoc >=2.4, <3.0",
    "plotly >=6.3, <7.0",
    "sphinx-gallery >=0.19, <1.0",
    "sphinx >=7.4, <8.0",
    "sphinxcontrib-apidoc >=0.6, <1.0",
    "jupyter-book >=1.0, <2.0",
    "pyyaml >=6.0, <7.0"
]
all = ["snowexsql[dev,docs]"]

[project.urls]
Homepage = "https://github.com/SnowEx/snowexsql"
Documentation = "https://snowexsql.readthedocs.io"
Repository = "https://github.com/SnowEx/snowexsql.git"
Issues = "https://github.com/SnowEx/snowexsql/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "snowexsql/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]
