[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "snowexsql"
dynamic = ["version"]
license = {text = "GNU"}
description = "SQL Database software for SnowEx data"
keywords = ["snowex", "sql", "database", "snow"]
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13'
]

dependencies = [
    "utm <0.9",
    "geoalchemy2 <1.0",
    "geopandas <2.0",
    "psycopg2-binary <3.0",
    "rasterio <2.0",
    "SQLAlchemy <3.0",
    "boto3 <2.0",
]


[project.optional-dependencies]

dev = [
    "factory_boy <4.0",
    "pytest-factoryboy <3.0",
    "pytest <9.0",
    "pytest-cov <8.0",
    "sphinx-autobuild <2025.0",
]
docs = [
    "ipython <9.0",
    "nbconvert <8.0",
    "nbsphinx <1.0",
    "pandoc <3.0",
    "plotly <7.0",
    "sphinx-gallery <1.0",
    "sphinx <8.0",
    "sphinxcontrib-apidoc <1.0",
    "jupyter-book <2.0",
    "pyyaml <7.0"
]
all = ["snowexsql[dev,docs,lambda]"]

[project.urls]
Homepage = "https://github.com/SnowEx/snowexsql"
Documentation = "https://snowexsql.readthedocs.io"
Repository = "https://github.com/SnowEx/snowexsql.git"
Issues = "https://github.com/SnowEx/snowexsql/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "snowexsql/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require AWS credentials (deselect with '-m \"not integration\"')",
    "handler: marks tests as Lambda handler tests that require local database credentials (deselect with '-m \"not handler\"')",
    "lambda: marks tests as Lambda-specific tests",
]